# bias-to-text-pytorch

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
b2t/: captions.py  clip_prefix_captioning_inference.py  keywords.py
b2t/dataset/: __init__.py
b2t/metrics/: clip.py  git.py
commonalizer/: __init__.py  clip_prefix_captioning_inference.py
commonalizer/dataset/: __init__.py  celeba.py  waterbirds.py
commonalizer/metrics/: __init__.py  clip.py  git.py
commonalizer/models/: __init__.py  resnet.py
experiments/: b2t.py  train.py
scripts/: download.py  download_celeba.py  download_weights.py
